# PerfLite

./: .eslintignore  .eslintrc.js  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  webpack.analyze.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.esm.js  webpack.prod.js
.cargo/: config.toml
.cursor/rules/: perf-lite-rules.mdc
.husky/: commit-msg  pre-commit
docs/: PerfLite完整方案.md  PerfLite工具实现方案.md  代码规范.md  提交规范.md
docs/plugins/: react-profiler.md  vue-profiler.md
examples/basic/: index.html
examples/plugins/: index.html  react-example.html  react-plugin.js  vue-example.html  vue-plugin.js
examples/visualization/: index.html
rust/: Cargo.toml  build.sh
rust/benches/: parser_benchmark.rs
rust/src/: lib.rs  parser.rs  simd.rs  utils.rs
scripts/: build.sh  init-husky.sh  setup.sh
src/: index.ts
src/cache/: index.ts  memory.ts  storage.ts
src/core/: ErrorParser.ts  PerformanceAnalyzer.ts  Visualization.ts  api-counter.ts  index.ts
src/parser/: index.ts  mock-parser.ts
src/parser/deepseek/: client.ts  index.ts
src/parser/wasm/: index.ts  loader.ts
src/plugins/: index.ts  interface.ts
src/plugins/built-in/: memory-monitor.ts  react-profiler.ts  source-map.ts  vue-profiler.ts
src/types/: api-counter.ts  cache.ts  config.ts  error.ts  index.ts  parser.ts  perf.ts  plugin.ts  visualization.ts
src/utils/: cache.ts  compress.ts  index.ts  sanitize.ts  source-map.ts
src/visualization/: chart-adapter.ts  dashboard.ts  index.ts
src/visualization/renderers/: canvas.ts  webgl.ts
test-reports/: junit.xml
tests/: .eslintrc.js  ErrorParser.test.ts  Visualization.test.ts  generate-report.js  jest.config.cjs  setup.ts
tests/cache/: memory.test.ts  storage.test.ts
tests/core/: ErrorParser.test.ts  PerformanceAnalyzer.test.ts  PerformanceOptimization.test.ts  error-parser.test.ts  performance-analyzer.test.ts  visualization.test.ts
tests/coverage/: index.html
tests/coverage/lcov-report/: index.html
tests/e2e/: browser.test.ts  visualization.test.ts
tests/integration/: error-handling.test.ts  performance.test.ts
tests/parser/: deepseek.test.ts  wasm-parser.test.ts  wasm.test.ts
tests/performance/: stress.test.ts
tests/reporters/: custom-reporter.js
tests/visualization/: webgl.test.ts
