[package]
name = "perflite-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly parser for PerfLite"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/perflite"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/lib.rs"

[dependencies]
wasm-bindgen = "0.2.88"
regex = { version = "1.9.1", default-features = false }
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.64", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
criterion = "0.5"

[features]
default = ["simd"]
simd = []

# 使用wasm-opt进行更激进的体积优化
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# wasm-pack构建优化配置
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]

# 性能基准测试
[[bench]]
name = "parser_benchmark"
harness = false