[package]
name = "perflite_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WASM module for PerfLite"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
regex = "1.10.2"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]
simd = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"] 