[package]
name = "perflite_wasm"
version = "0.1.0"
authors = ["PerfLite Team"]
edition = "2021"
description = "WASM parser for PerfLite"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "simd"]
simd = []

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

# 设置SIMD支持
[target.'cfg(target_arch = "wasm32")'.dependencies]
# 移除wasm-bindgen-rayon，因为它需要特殊的Webpack配置
# wasm-bindgen-rayon = { version = "1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = "0.4.0"

# 性能基准
[[bench]]
name = "parser_benchmark"
harness = false

# 优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# 添加SIMD支持
[package.metadata.wasm-pack]
rustflags = ["-C", "target-feature=+simd128"]

# 开发配置
[profile.dev]
opt-level = 0

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"] 